# audio-visualizer

./: .gitignore  LICENSE  TODO  VolumeShape.py  __init__.py  pyproject.toml  readme.md  requirements.txt  run.bat  run.sh  utilities.py  visualizer.py
tests/: conftest.py  test_advanced_tab.py  test_app_paths.py  test_bundle_reader.py  test_capabilities.py  test_caption_animation_registry.py  test_caption_audio_reactive.py  test_caption_bundle_loading.py  test_caption_ffmpeg_renderer.py  test_caption_markdown_to_ass.py  test_caption_measurement.py  test_caption_presets.py  test_caption_render_worker.py  test_caption_sizing.py  test_caption_smoke.py  test_caption_typewriter.py  test_caption_word_highlight.py  test_caption_word_reveal.py  test_caption_wrapper.py  test_composition_evaluation.py  test_composition_filter_graph.py  test_correction_db.py  test_events.py  test_hwaccel.py  test_integration_smoke.py  test_logging.py  test_lora_training.py  test_media_probe.py  test_media_utils.py  test_render_composition_playback.py  test_srt_alignment.py  test_srt_audio.py  test_srt_config.py  test_srt_edit_corrections.py  test_srt_edit_lint.py  test_srt_edit_model.py  test_srt_edit_resync.py  test_srt_events.py  test_srt_format_helpers.py  test_srt_gen_worker.py  (+27 more)
ui/: __init__.py  circleChromaVisualizerView.py  circleVisualizerView.py  circleVolumeVisualizerView.py  combinedVisualizerView.py  generalSettingViews.py  generalView.py  generalVisualizerView.py  mainWindow.py  rectangleChromaVisualizerView.py  rectangleVisualizerView.py  rectangleVolumeVisualizerView.py  utilities.py  (+2 more)
(+236 files in other folders)
