[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-visualizer"
version = "0.1.0"
description = "Generate audio visualizations as video output."
readme = "readme.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [{name = "Timothy Eck"}]
dependencies = [
  "av==15.0.0",
  "librosa==0.11.0",
  "numpy==2.3.2",
  "Pillow==11.3.0",
  "PySide6==6.9.1",
  "PySide6_Addons==6.9.1",
  "PySide6_Essentials==6.9.1",
]

[project.scripts]
audio-visualizer = "audio_visualizer.visualizer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
